--- a/resources/sass/mq/desktop/_structure.scss
+++ b/resources/sass/mq/desktop/_structure.scss
@@ -6,6 +6,7 @@
 	-----------------------------------
 	
 	- Intro
+	- Gallery
 
 	
 -------------------------------------------------------------------------*/
@@ -19,4 +20,38 @@
 		letter-spacing: 6px;
 	}
 
+}
+
+/* GALLERY -----------------------------------------------------------*/
+
+#video-gallery {
+	position: relative;
+	
+	div {
+		position: relative;
+		width: 100%;
+		height: 450px;
+		
+		h4 {
+			position: absolute;
+			top: 50%;
+			margin: -40px 0 0 0;
+			width: 100%;
+			font-size: 16px;
+			line-height: 33px;
+			text-align: center;
+			color: #fff;
+			
+			span {
+				display: block;
+				font-size: 50px;
+			}
+		}
+		
+		video {
+			width: 100%;
+			height: auto;
+		}
+	}
+	
 }
